# sherpa-tt_remote_api

./: .gitignore  CMakeLists.txt  README.md  README.txt  build.sh  checkenv.sh  clean.sh  setupSherpaDev.sh  sherpa_tt_remote_api.pc  sherpa_tt_remote_api.pc.in
client/: CMakeLists.txt  SherpaTTTeleClient.cpp  SherpaTTTeleClient.h  sherpa-tt_remote_api-client.pc.in
include/: Image.h  JointState.h  Joints.h  Motion2D.h  Pose.h  Quaternion.h  SherpaTTTeleClient.h  Vector3.h
src/: DGPS.cpp  Joints.cpp  Motion2D.cpp  Pose.cpp
types/: CMakeLists.txt  DEM.cpp  DEM.h  DGPS.cpp  DGPS.h  IMU.cpp  IMU.h  Image.cpp  Image.h  JointState.cpp  JointState.h  Joints.cpp  Joints.h  Motion2D.cpp  Motion2D.h  MotionCommand.cpp  MotionCommand.h  Pose.cpp  Pose.h  Quaternion.cpp  Quaternion.h  Vector3.cpp  Vector3.h
